Replace log fields by numeric values
In the JSON access logs, the numeric fields were quoted so could not be
exploited in Kibana as numeric fields.

--- a/9.0/templates/nginx.conf.tmpl
+++ b/9.0/templates/nginx.conf.tmpl
@@ -27,11 +27,11 @@ http {
    '"verb": "$request_method", '
    '"request": "$request_uri", '
    '"httpversion": "$server_protocol", '
-   '"response": "$status", '
-   '"bytes": "$body_bytes_sent", '
-   '"time_request": "$request_time", '
-   '"time_backend_connect": "$upstream_connect_time", '
-   '"time_backend_response": "$upstream_response_time", '
+   '"response": $status, '
+   '"bytes": $body_bytes_sent, '
+   '"time_request": $request_time, '
+   '"time_backend_connect": $upstream_connect_time, '
+   '"time_backend_response": $upstream_response_time, '
    '"cache": "$upstream_cache_status", '
    '"referrer": "$http_referer", '
    '"agent": "$http_user_agent" }';
